<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"

    android:id="@+id/scrollView"
    android:layout_above="@+id/btnContainer">
<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
               >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_send_to"
        android:id="@+id/lblSendTo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/LabelTextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none|textPersonName"
        android:ems="10"
        android:id="@+id/contactName"
        android:layout_below="@+id/lblSendTo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_send_to"
        android:editable="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_currency"
        android:id="@+id/lblCurrency"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/LabelTextStyle"
        android:layout_below="@+id/contactName"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencySpinner"
        android:layout_below="@+id/lblCurrency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:clickable="true"
        android:popupElevation="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_amount"
        android:id="@+id/lblAmount"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/LabelTextStyle"
        android:layout_below="@+id/currencySpinner"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="10"
        android:id="@+id/amountSend"
        android:layout_below="@+id/lblAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/currencySpinner"
        android:layout_alignEnd="@+id/currencySpinner"
        android:text="@string/defaultSendAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rec_currency"
        android:id="@+id/lblRecCurrency"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/LabelTextStyle"
        android:layout_below="@+id/amountSend"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencyRecSpinner"
        android:layout_below="@+id/lblRecCurrency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currencyRecSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/buttonBarColor"
        android:id="@+id/recContainer"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:elevation="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rec_amount"
            android:id="@+id/lblRecAmount"
            style="@style/LabelTextStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueRecAmount"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>




</RelativeLayout>
</ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="5dp"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/btnContainer"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCalculate"
            android:id="@+id/btnCalculate"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:enabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSend"
            android:id="@+id/btnSend"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:enabled="false" />
    </LinearLayout>
</RelativeLayout>